add meta description to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
+        <meta name="description" content="'So far out of the box, but not so far out of my mind.' Welcome to my home on the web.">
         <meta name="viewport" content="width=device-width">
 
         <!-- Bootstrap! -->
@@ -66,6 +67,8 @@
       </nav>
 
       {{ content }}
+
+    </div>
 
     <div class="footer">
     </div>
