add about and contact page, switch blog list arrow to Font Awesome

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,14 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="/about.html">About</a>
+            </li>
+            <li>
+              <a href="/contact.html">Contact</a>
+          </ul>
+
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a href="https://twitter.com/jsthornquest">
