--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="description" content="'So far out of the box, but not so far out of my mind.' Welcome to my home on the web.">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <!-- Bootstrap! -->
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
@@ -40,8 +40,6 @@
             <li>
               <a href="/about.html">About</a>
             </li>
-            <li>
-              <a href="/contact.html">Contact</a>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
