change social links to format correctly in mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,27 +44,19 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="https://twitter.com/jsthornquest">
+              <a class="pull-left" href="https://twitter.com/jsthornquest">
                 <i class="fa fa-twitter fa-lg"></i>
               </a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/jsthornquest">
+              <a class="pull-left" href="https://www.facebook.com/jsthornquest">
                 <i class="fa fa-facebook fa-lg"></i>
               </a>
-            </li>
-            <li>
-              <a href="https://github.com/jordanthornquest">
+              <a class="pull-left" href="https://github.com/jordanthornquest">
                 <i class="fa fa-github fa-lg"></i>
               </a>
-            </li>
-            <li>
-              <a href="https://soundcloud.com/jordanthornquest">
+              <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
                 <i class="fa fa-cloud fa-lg"></i>
               </a>
-            </li>
-            <li>
-              <a href="http://pinterest.com/jsthornquest/">
+              <a class="pull-left" href="http://pinterest.com/jsthornquest/">
                 <i class="fa fa-pinterest fa-lg"></i>
               </a>
             </li>
