--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<div class="page-header">
+  <h1>{{ page.title }}</h1>
+  <p class="meta">{{ page.date | date_to_string }}</p>
+</div>
 
 <div class="post">
 {{ content }}
