--- a/css/home.css
+++ b/css/home.css
@@ -22,3 +22,7 @@
   -webkit-box-shadow: 0 8px 6px -6px black;
   -moz-box-shadow: 0 8px 6px -6px black;
   box-shadow: 0 8px 6px -6px black; }
+
+.page-header {
+  margin-top: 25px;
+}
