add twitter and soundcloud to front page

--- a/css/home.css
+++ b/css/home.css
@@ -31,3 +31,11 @@
 .portfolio-item-title {
   margin-bottom: 25px;
 }
+
+.home-header {
+  border: none;
+}
+
+.jst-timeline iframe {
+  width: 100%;
+}
