--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -59,6 +59,13 @@ layout: default
     </div><!-- /.navbar-collapse -->
   </nav>
 
+<ol class="breadcrumb">
+  <li><a href="/">Home</a></li>
+  <li><a href="/creative.html">Creative</a></li>
+  <li><a href="/creative/writing.html">Writing</a></li>
+  <li class="active">{{ page.title }}</li>
+</ol>
+
 <div class="page-header">
   <h1>{{ page.title }}</h1>
   <p class="meta">{{ page.date | date_to_string }}</p>
