change repo to clean urls, start homepage on Twitter

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,3 @@
----
-layout: default
-title: Creative
----
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -18,18 +14,18 @@ title: Creative
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li>
-        <a href="/about.html">About</a>
+        <a href="/about">About</a>
       </li>
       <li>
-        <a href="/contact.html">Contact</a>
+        <a href="/contact">Contact</a>
       </li>
       <li>
-      <a href="/portfolio.html"> Portfolio</a>
+      <a href="/portfolio"> Portfolio</a>
       </li>
-      <li class="dropdown active">
+      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Creative <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li class="active"><a href="/creative.html">Home</a></li>
+            <li><a href="/creative">Home</a></li>
             <li class="divider"></li>
             <li><a href="/creative/art.html">Art</a></li>
             <li><a href="/creative/music.html">Music</a></li>
@@ -43,30 +39,14 @@ title: Creative
           <a class="pull-left" href="https://twitter.com/jsthornquest">
             <i class="fa fa-twitter fa-lg"></i>
           </a>
-          <a class="pull-left" href="https://www.facebook.com/jsthornquest">
-            <i class="fa fa-facebook fa-lg"></i>
+          <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
+            <i class="fa fa-cloud fa-lg"></i>
           </a>
           <a class="pull-left" href="https://github.com/jordanthornquest">
             <i class="fa fa-github fa-lg"></i>
           </a>
-          <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
-            <i class="fa fa-cloud fa-lg"></i>
-          </a>
-          <a class="pull-left" href="http://pinterest.com/jsthornquest/">
-            <i class="fa fa-pinterest fa-lg"></i>
-          </a>
         </li>
       </ul>
+
     </div><!-- /.navbar-collapse -->
   </nav>
-
-
-<div id="home">
-
-  <img src="http://farm4.staticflickr.com/3831/11217263025_ae1596d70d_o.jpg" class="img-responsive one-edge-shadow" alt="Amp &amp; Feet">
-
-  <h1>Creative <small>stuff that I've made.</small></h1>
-
-  <p>More stuff on the way. Check the "Creative" dropdown for what's available, for now :)</p>
-
-</div>
