make the navbar contents within the container whilst the navbar is full-width!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
 
       {{ content }}
 
-      <div class="footer">
+      <footer>
         <hr>
         <small class="text-muted"> Website by me. Proudly hosted on <a href="http://digitalocean.com">Digital Ocean</a> and built with <a href="http://jekyllrb.com">Jekyll.</a></small>
-      </div>
+      </footer>
 
     </div>
 
