--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,52 +1,56 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">Jordan Thornquest</a>
-  </div>
+  <div class="navbar-inner">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Jordan Thornquest</a>
+      </div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li>
-        <a href="/about">About</a>
-      </li>
-      <li>
-        <a href="/contact">Contact</a>
-      </li>
-      <li>
-      <a href="/portfolio"> Portfolio</a>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Creative <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="/creative">Home</a></li>
-            <li class="divider"></li>
-            <li><a href="/creative/art.html">Art</a></li>
-            <li><a href="/creative/music.html">Music</a></li>
-            <li><a href="/creative/writing.html">Writing</a></li>
-            </ul>
-        </li>
-      </ul>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="/about">About</a>
+          </li>
+          <li>
+            <a href="/contact">Contact</a>
+          </li>
+          <li>
+          <a href="/portfolio"> Portfolio</a>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Creative <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/creative">Home</a></li>
+                <li class="divider"></li>
+                <li><a href="/creative/art.html">Art</a></li>
+                <li><a href="/creative/music.html">Music</a></li>
+                <li><a href="/creative/writing.html">Writing</a></li>
+                </ul>
+            </li>
+          </ul>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a class="pull-left" href="https://twitter.com/jsthornquest">
-            <i class="fa fa-twitter fa-lg"></i>
-          </a>
-          <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
-            <i class="fa fa-cloud fa-lg"></i>
-          </a>
-          <a class="pull-left" href="https://github.com/jordanthornquest">
-            <i class="fa fa-github fa-lg"></i>
-          </a>
-        </li>
-      </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a class="pull-left" href="https://twitter.com/jsthornquest">
+                <i class="fa fa-twitter fa-lg"></i>
+              </a>
+              <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
+                <i class="fa fa-cloud fa-lg"></i>
+              </a>
+              <a class="pull-left" href="https://github.com/jordanthornquest">
+                <i class="fa fa-github fa-lg"></i>
+              </a>
+            </li>
+          </ul>
 
-    </div><!-- /.navbar-collapse -->
+        </div><!-- /.navbar-collapse -->
+      </div>
+    </div>
   </nav>
