--- a/css/home.css
+++ b/css/home.css
@@ -1,22 +1,11 @@
 .container {
-  padding-bottom: 25px;
-}
-
-@media (min-width: 1200px) {
-  .container {
-  width: 900px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-  width: 900px;
-  }
+  max-width: 900px;
 }
 
 .center-img {
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+}
 
 .one-edge-shadow {
   -webkit-box-shadow: 0 8px 6px -6px black;
@@ -39,4 +28,8 @@
   .jst-twitter iframe {
     width: 100%;
   }
+}
+
+footer {
+  margin-bottom: 25px;
 }
