fix broken link in writing breadcrumbs

--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -4,7 +4,7 @@ layout: default
 
 <ol class="breadcrumb">
   <li><a href="/">Home</a></li>
-  <li><a href="/creative.html">Creative</a></li>
+  <li><a href="/creative">Creative</a></li>
   <li><a href="/creative/writing.html">Writing</a></li>
   <li class="active">{{ page.title }}</li>
 </ol>
