--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,16 @@
+/* Base Styles */
 .container {
   max-width: 900px;
 }
 
+/* Navbar */
+@media (min-width: 768px) {
+  nav .container {
+    padding: 0px;
+  }
+}
+
+/* Home Body */
 .center-img {
   margin-left: auto;
   margin-right: auto;
