--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,9 +29,9 @@
               <ul class="dropdown-menu">
                 <li><a href="/creative">Home</a></li>
                 <li class="divider"></li>
-                <li><a href="/creative/art.html">Art</a></li>
-                <li><a href="/creative/music.html">Music</a></li>
-                <li><a href="/creative/writing.html">Writing</a></li>
+                <li><a href="/creative/art">Art</a></li>
+                <li><a href="/creative/music">Music</a></li>
+                <li><a href="/creative/writing">Writing</a></li>
                 </ul>
             </li>
           </ul>
