--- a/css/home.css
+++ b/css/home.css
@@ -10,6 +10,12 @@
   }
 }
 
+.no-transition {
+  -webkit-transition: height 0.0001s ease;
+          transition: height 0.0001s ease;
+}
+
+
 /* Home Body */
 .center-img {
   margin-left: auto;
@@ -41,4 +47,8 @@
 
 footer {
   margin-bottom: 25px;
+}
+
+.portfolio-img {
+  margin-bottom: 20px;
 }
