update CSS for images, fix nav tabs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,10 @@
 
     <style>
       /* Base Styles */
+      img {
+        margin-bottom: 20px;
+      }
+
       .container {
         max-width: 900px;
       }
@@ -87,7 +91,7 @@
     </div>
 
     <!-- Scripts, Precious -->
-    <script async src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script async src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
     <!-- Google Analytics -->
