--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }} | Jordan Thornquest</title>
-    <meta name="description" content="So far out of the box, but not so far out of my mind.">
+
+    {% if page.title %}
+      <title>{{ page.title }} | Jordan Thornquest</title>
+    {% else %}
+      <title>Jordan Thornquest</title>
+    {% endif %}
+    {% if page.description %}
+      <meta name="description" content="{{ page.description }}">
+    {% else %}
+      <meta name="description" content="So far out of the box, but not so far out of my mind.">
+    {% endif %}
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/png" href="/favicon.png">
 
@@ -13,7 +23,6 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
     <style>
       /* Base Styles */
       img {
@@ -49,7 +58,7 @@
         box-shadow: 0 8px 6px -6px black; }
 
       .page-header {
-        margin-top: 25px;
+        margin-top: 0px;
       }
 
       .portfolio-item-title {
@@ -74,6 +83,7 @@
         margin-bottom: 20px;
       }
     </style>
+
   </head>
   <body>
 
