--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,90 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    {% if page.title %}
-      <title>{{ page.title }} | Jordan Thornquest</title>
-    {% else %}
-      <title>Jordan Thornquest</title>
-    {% endif %}
-    {% if page.description %}
-      <meta name="description" content="{{ page.description }}">
-    {% else %}
-      <meta name="description" content="So far out of the box, but not so far out of my mind.">
-    {% endif %}
+  {% include head.html %}
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" type="image/png" href="/favicon.png">
-
-    <!-- Bootstrap! -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <style>
-      /* Base Styles */
-      img {
-        margin-bottom: 20px;
-      }
-
-      .container {
-        max-width: 900px;
-      }
-
-      /* Navbar */
-      @media (min-width: 768px) {
-        nav .container {
-          padding: 0px;
-        }
-      }
-
-      .no-transition {
-        -webkit-transition: height 0.0001s ease;
-                transition: height 0.0001s ease;
-      }
-
-
-      /* Home Body */
-      .center-img {
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .one-edge-shadow {
-        -webkit-box-shadow: 0 8px 6px -6px black;
-        -moz-box-shadow: 0 8px 6px -6px black;
-        box-shadow: 0 8px 6px -6px black; }
-
-      .page-header {
-        margin-top: 0px;
-      }
-
-      .portfolio-item-title {
-        margin-bottom: 25px;
-      }
-
-      .home-header {
-        border: none;
-      }
-
-      @media (min-width: 768px) {
-        .jst-twitter iframe {
-          width: 100%;
-        }
-      }
-
-      footer {
-        margin-bottom: 25px;
-      }
-
-      .portfolio-img {
-        margin-bottom: 20px;
-      }
-    </style>
-
-  </head>
   <body>
 
     {% include nav.html %}
