update styling with fluid container and fixed navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
-  <div class="navbar-inner">
-    <div class="container">
+  <div class="container-fluid">
+    <div class="navbar-inner">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jt-nav">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -13,7 +13,7 @@
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse no-transition" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse no-transition" id="jt-nav">
         <ul class="nav navbar-nav">
           <li>
             <a href="/about">About</a>
@@ -32,25 +32,25 @@
                 <li><a href="/creative/art">Art</a></li>
                 <li><a href="/creative/music">Music</a></li>
                 <li><a href="/creative/writing">Writing</a></li>
-                </ul>
+              </ul>
             </li>
           </ul>
 
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a class="pull-left" href="https://twitter.com/jsthornquest">
-                <i class="fa fa-twitter fa-lg"></i>
-              </a>
-              <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
-                <i class="fa fa-cloud fa-lg"></i>
-              </a>
-              <a class="pull-left" href="https://github.com/jordanthornquest">
-                <i class="fa fa-github fa-lg"></i>
-              </a>
-            </li>
-          </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="pull-left" href="https://twitter.com/jsthornquest">
+              <i class="fa fa-twitter fa-lg"></i>
+            </a>
+            <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
+              <i class="fa fa-cloud fa-lg"></i>
+            </a>
+            <a class="pull-left" href="https://github.com/jordanthornquest">
+              <i class="fa fa-github fa-lg"></i>
+            </a>
+          </li>
+        </ul>
 
-        </div><!-- /.navbar-collapse -->
-      </div>
+      </div><!-- /.navbar-collapse -->
     </div>
-  </nav>
+  </div>
+</nav>
