wrap content in a main tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
 
     <div class="container-fluid">
 
-      {{ content }}
+      <main>
+        {{ content }}
+      </main>
 
       <footer>
         <hr>
