--- a/_includes/style.html
+++ b/_includes/style.html
@@ -1,4 +1,5 @@
 <style>
+
   /* Base Styles */
   img {
     margin-bottom: 20px;
@@ -6,13 +7,6 @@
 
   .container-fluid {
     max-width: 900px;
-  }
-
-  /* Navbar */
-  @media (min-width: 768px) {
-    nav .container {
-      padding: 0px;
-    }
   }
 
   .no-transition {
@@ -36,12 +30,12 @@
     margin-top: 0px;
   }
 
-  .portfolio-item-title {
-    margin-bottom: 25px;
+  .stream-tabs {
+    margin-bottom: 20px;
   }
 
-  .home-header {
-    border: none;
+  .portfolio-item-title {
+    margin-bottom: 25px;
   }
 
   @media (min-width: 768px) {
@@ -57,4 +51,5 @@
   .portfolio-img {
     margin-bottom: 20px;
   }
+
 </style>
