update view for posts on the front page

--- a/_includes/style.html
+++ b/_includes/style.html
@@ -34,6 +34,14 @@
     margin-bottom: 20px;
   }
 
+  .post-header {
+    margin-bottom: 30px;
+  }
+
+  .post-info {
+    margin-right: 10px;
+  }
+
   .portfolio-item-title {
     margin-bottom: 25px;
   }
